# harnas-python

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  live-providers.yml
src/harnas/: __init__.py  agent.py  agent_loop.py  cli.py  event.py  hooks.py  log.py  manifest.py  mutations.py  observation.py  session.py  smoke.py
src/harnas/actions/: compact.py
src/harnas/compaction/: helpers.py
src/harnas/conformance/: runner.py  scripted_provider.py  scripted_stream_provider.py
src/harnas/ingestors/: anthropic.py  gemini.py  openai.py
src/harnas/projections/: anthropic.py  gemini.py  openai.py
src/harnas/providers/: __init__.py  anthropic.py  anthropic_stream.py  errors.py  gemini.py  gemini_stream.py  http.py  mock.py  openai.py  openai_stream.py  retry_policy.py  streaming.py
src/harnas/strategies/: observation.py
src/harnas/strategies/compaction/: marker_tail.py  summary_tail.py  token_marker_tail.py  tool_output_cap.py
src/harnas/strategies/permission/: __init__.py  always_allow.py  deny_by_name.py  human_approval.py
src/harnas/tools/: builtin.py  middleware.py  registry.py  runner.py  tool.py
tests/: test_builtin_tools.py  test_cli.py  test_manifest.py  test_providers.py  test_retry_policy.py  test_smoke.py  test_strategies.py  test_tool_middleware.py
tests/properties/: test_log_properties.py
