[project]
name = "harnas"
version = "0.8.0"
description = "Python implementation of Harnas — a specification for LLM agent harnesses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "René van Pelt", email = "contact@renevanpe.lt" }]
dependencies = []

[project.scripts]
harnas = "harnas.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
